[gd_scene load_steps=6 format=3 uid="uid://sdw01k2qo1x"]

[ext_resource type="Script" uid="uid://g70nc7o0ugqb" path="res://Menus/node_2d.gd" id="1_ax5ce"]
[ext_resource type="Texture2D" uid="uid://b8gn7q2rlrc84" path="res://Assets/MainMenu.png" id="2_dtclk"]
[ext_resource type="Texture2D" uid="uid://dt4gwx4g3wa3o" path="res://Assets/Start game.png" id="3_onpd1"]
[ext_resource type="Texture2D" uid="uid://dtha7pmpqw5e3" path="res://Assets/Howtoplay.png" id="4_skixr"]
[ext_resource type="Texture2D" uid="uid://dglhonvqyg3os" path="res://Assets/Quit.png" id="5_xmlie"]

[node name="StartUpMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ax5ce")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00372, 1.0034)
texture = ExtResource("2_dtclk")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.334
offset_top = -240.407
offset_right = -11.3338
offset_bottom = -16.4072
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.19246, 2.19246)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TextureRect/MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="CanvasLayer/TextureRect/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
icon = ExtResource("3_onpd1")

[node name="HowToplay" type="Button" parent="CanvasLayer/TextureRect/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
icon = ExtResource("4_skixr")

[node name="Quit" type="Button" parent="CanvasLayer/TextureRect/MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
icon = ExtResource("5_xmlie")

[connection signal="pressed" from="CanvasLayer/TextureRect/MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureRect/MarginContainer/VBoxContainer/HowToplay" to="." method="_on_how_toplay_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureRect/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
